@@ -17,6 +17,8 @@ Changelog for LedgerSMB 1.3.1
 * String standardization in employee/user management (Herman V)
 * Fixed Employee record duplicted on save (Herman V)
 * Fixed upgrade script not bringing in entity.name for employees (Chris T)
+* Fixed upgrade script error importing duplicate customer/vendor numbers
+(Chris T2)
 
 Changelog for LedgerSMB 1.3.0
 
